--- a/_posts/2021-04-07-Picture.md
+++ b/_posts/2021-04-07-Picture.md
@@ -12,4 +12,4 @@ tags:
 
 
 美丽花儿:
-![hua](https://github.com/Hongtai-S/Hongtai-S.github.io/blob/master/img/Hongtai-S.jpg "hua")
+![hua](img/Hongtai-S.jpg "hua")
