--- a/_posts/2021-04-07-Picture.md
+++ b/_posts/2021-04-07-Picture.md
@@ -1,13 +1,13 @@
 ---
 layout:     post
 title:      图片测试
-subtitle:   这里记录每天的心情与收获，有时间就写写。
+subtitle:   这是一个测试篇。
 date:       2021-04-07
 author:     Hongtai S
 header-img: img/post-bg-article.jpg
 catalog: true
 tags:
-    - 日记
+    - 测试
 ---
 
 
